<resources>
    <string name="app_name">MaterialPreferencesActivity</string>

    <string name="sm_switch1">Switch1</string>
    <string name="sm_switch2">Switch2</string>
    <string name="sm_text1">Text1</string>
    <string name="sm_number1">Number1</string>
    <string name="sm_radio1">Radio1</string>
    <string name="sm_build">Build</string>

    <string name="radio_choice_1">Choice A</string>
    <string name="radio_choice_2">Choice 2</string>
    <string name="radio_choice_3">Choice Coconut</string>
    <string-array name="radiokeys1">
        <item>@string/radio_choice_1</item>
        <item>@string/radio_choice_2</item>
        <item>@string/radio_choice_3</item>
    </string-array>
    <string-array name="radio1">
        <item>@string/radio_choice_1</item>
        <item>@string/radio_choice_2</item>
        <item>@string/radio_choice_3</item>
    </string-array>
    <string name="marsh">Marshmallow Only</string>
    <string name="action_about">About</string>
    <string name="secret">Secret Preference</string>
</resources>
